--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "vue": "^3.4.37",
-    "vue-final-modal": "^4.5.5"
+    "vue-final-modal": "^4.5.5",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "sass-embedded": "^1.78.0",
-    "vite": "^5.4.6"
+    "vite": "^5.4.8"
   }
 }
