--- a/.github/workflows/main_autospa.yml
+++ b/.github/workflows/main_autospa.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - AutoSpa
 
 on:
@@ -25,10 +22,11 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          # Bỏ qua bước test nếu không cần thiết
+          # npm run test --if-present 
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -43,7 +41,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -67,5 +65,4 @@ jobs:
         with:
           app-name: 'AutoSpa'
           slot-name: 'Production'
-          package: .
-          
+          package: ./dist # Đường dẫn tới thư mục chứa tệp đã build
