--- a/.github/workflows/main_autospa.yml
+++ b/.github/workflows/main_autospa.yml
@@ -65,4 +65,4 @@ jobs:
         with:
           app-name: 'AutoSpa'
           slot-name: 'Production'
-          package: './dist' # Đường dẫn tới thư mục chứa tệp đã build
+          package: ./dist # Đường dẫn tới thư mục chứa tệp đã build
