Update main_autospa.yml 1h56

--- a/.github/workflows/main_autospa.yml
+++ b/.github/workflows/main_autospa.yml
@@ -62,4 +62,4 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'AutoSpa'
-          package: ./dist
+          package: './dist'
