--- a/.github/workflows/main_autospa.yml
+++ b/.github/workflows/main_autospa.yml
@@ -67,5 +67,5 @@ jobs:
         with:
           app-name: 'AutoSpa'
           slot-name: 'Production'
-          package: release.zip
+          package: ./dist
           
