--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "vue": "^3.4.37",
     "vue-final-modal": "^4.5.5",
     "vue-router": "^4.4.5"
