--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.1",
+    "@ckeditor/ckeditor5-link": "^43.3.1",
+    "@ckeditor/ckeditor5-upload": "^43.3.1",
+    "@ckeditor/ckeditor5-vue": "^7.2.0",
     "axios": "^1.7.7",
+    "ckeditor5": "^43.3.1",
     "swiper": "^11.1.14",
     "vue": "^3.4.37",
     "vue-final-modal": "^4.5.5",
