--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "swiper": "^11.1.14",
     "vue": "^3.4.37",
     "vue-final-modal": "^4.5.5",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
